--- a/src/app/auth/pages/registration/form.component.html
+++ b/src/app/auth/pages/registration/form.component.html
@@ -5,6 +5,7 @@
         <input  class="input {{name?.invalid && (name?.dirty || name?.touched) ? 'red-border' : ''}}"
             type="text"
             formControlName="name"
+            (input)="inputChangeHandler()"
             maxlength
             required/>
         <div *ngIf="name?.invalid && (name?.dirty || name?.touched)" class="invalid">
@@ -18,10 +19,11 @@
                 {{name?.errors?.['firstName']}}
             </div>
         </div>
-        <label class="small-text" for="login">login </label>
+        <label class="small-text" for="login">email </label>
         <input  class="input {{login?.invalid && (login?.dirty || login?.touched) ? 'red-border' : ''}}"
             type="text"
             formControlName="login"
+            (input)="inputChangeHandler()"
             required
             email/>
         <div *ngIf="login?.invalid && (login?.dirty || login?.touched)" class="invalid">
@@ -36,6 +38,7 @@
         <input  class="input {{password?.invalid && (password?.dirty || password?.touched) ? 'red-border' : ''}}"
             type="password"
             name="password"
+            (input)="inputChangeHandler()"
             required
             formControlName="password"/>  
             <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="invalid">
@@ -46,6 +49,6 @@
             Your password isn't strong enough. {{password?.errors?.['passwordStrength']}}
         </div>
         </div>     
-        <app-button class="login-button">Login</app-button>         
+        <app-button class="login-button" [disabled]="submitDisabled">Register</app-button>         
     </form>      
 </div>
