feat: save profile info to store and delete old files

--- a/src/app/auth/pages/profile/profile.component.html
+++ b/src/app/auth/pages/profile/profile.component.html
@@ -1,7 +1,7 @@
-<div class="flex profile-block shadow">
-    <div class="user-id">Id: {{this.item.uid.S}}</div>
-    <div>{{this.item.name.S}}</div>
-    <div>{{this.item.email.S}}</div>
-    <div>{{this.item.createdAt.S}}</div>
+<div class="profile-block shadow">
+    <div class="user-id">PROFILE INFO</div>
+    <div class="font18">Id: {{this.item?.uid?.S}}</div>
+    <div class="font18">Name: {{this.item?.name?.S}}</div>
+    <div class="font18">Email: {{this.item?.email?.S}}</div>
+    <div class="font18">Date of creation: {{this.item?.createdAt?.S}}</div>
 </div>
-  
