--- a/src/app/core/pages/page-not-found/page-not-found.component.html
+++ b/src/app/core/pages/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="block">
     <div class="margin-bottom">
         <img src="assets/images/pageNotFound.png">
-        <span class="grey">Sorry, smth went wrong</span>
+        <span class="grey">Sorry, page not found</span>
     </div>
     <app-button class="margin" (click)="this.backClickHandler()"> Go to home page</app-button>
 </div>
