--- a/src/app/connections/pages/main/main.component.html
+++ b/src/app/connections/pages/main/main.component.html
@@ -1,3 +1,4 @@
-<div>
+<div class="flex">
+    <app-list></app-list>
     <app-button (click)="profileClickHandler()">Profile</app-button>
-  </div>
+</div>
