feat: add confirm and deletion of group

--- a/src/app/connections/components/groupList/list.component.css
+++ b/src/app/connections/components/groupList/list.component.css
@@ -28,3 +28,10 @@
     margin-right: 12px;
     margin-bottom: 12px;
 }
+
+.delete {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
