feat: add conversation page

--- a/src/app/connections/components/peopleList/list.component.css
+++ b/src/app/connections/components/peopleList/list.component.css
@@ -29,9 +29,6 @@
     margin-bottom: 12px;
 }
 
-.delete {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.contrast-background {
+    background-color: rgb(243, 243, 183);
 }
