--- a/src/app/connections/components/groupList/list.component.html
+++ b/src/app/connections/components/groupList/list.component.html
@@ -1,8 +1,9 @@
 <div>
     <div class="flex baseline">
-        <app-button class="marginS" (click)="updateHandler()">Update</app-button> 
+        <app-button class="marginS" (click)="updateHandler()" [disabled]="updateDisabled || isRequesting">Update groups</app-button> 
         <app-button (click)="createHandler()">Create group</app-button>
     </div>
+    <div *ngIf="updateDisabled" >You can update group list in: {{countdown$ | async}} seconds</div>
     <div class="list-block">
         <div class="list-item" *ngFor="let item of items">
             <div *ngIf="item.createdBy.S === params.uid" (click)="deleteHandler(item.id.S)" class="delete">&times;</div>
