--- a/src/app/connections/pages/main/main.component.html
+++ b/src/app/connections/pages/main/main.component.html
@@ -1,4 +1,11 @@
 <div class="flex">
-    <app-list></app-list>
-    <app-button (click)="profileClickHandler()">Profile</app-button>
+    <div class="list-block paddingL">
+        <div>Groups list</div>
+        <app-list></app-list>
+    </div>
+    <div class="list-block paddingL">
+        <div>People</div>
+        <app-peoplelist></app-peoplelist>
+    </div>
+    <app-button class="paddingL" (click)="profileClickHandler()">Profile</app-button>
 </div>
