--- a/src/app/connections/components/confirmation/dialog.component.html
+++ b/src/app/connections/components/confirmation/dialog.component.html
@@ -1,6 +1,6 @@
 <div class="modal {{visible ? 'visible' : 'hidden'}}">
     <div class="modal-content">
-        <div class="margin-bottom">Delete group?</div>
+        <div class="margin-bottom">{{text}}</div>
         <app-button class="margin-right" (click)="deleteHandler()">Delete</app-button>   
         <app-button (click)="cancelHandler()">Cancel</app-button>      
     </div>
