--- a/src/app/connections/components/groupList/list.component.html
+++ b/src/app/connections/components/groupList/list.component.html
@@ -5,7 +5,7 @@
     </div>
     <div *ngIf="updateDisabled" >You can update group list in: {{countdown$ | async}} seconds</div>
     <div class="list-block">
-        <div class="list-item" *ngFor="let item of items">
+        <div class="list-item" *ngFor="let item of items" (click)="itemClickHandler(item)">
             <div *ngIf="item.createdBy.S === params.uid" (click)="deleteHandler(item.id.S)" class="delete">&times;</div>
             <div>
                 {{ item.name.S }}
@@ -17,6 +17,7 @@
             (saveEmitter)="handleSaveGroup()">
     </app-dialog> 
     <app-confirmation [visible]="showConfirmation" 
+            text="Delete group?"
             (closeEmitter)="handleCloseConfirmation()"
             (deleteEmitter)="handleDeleteConfirmation()">
     </app-confirmation> 
