feat: add toast message component and message area component

--- a/src/app/auth/pages/profile/profile.component.html
+++ b/src/app/auth/pages/profile/profile.component.html
@@ -26,4 +26,5 @@
         </ng-container>
     </div>
     <app-button [disabled]="isLoggingOut" (click)="this.logoutHandler()">Log out</app-button> 
+    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast>
 </div>
