--- a/src/app/auth/pages/signin-page/form.component.html
+++ b/src/app/auth/pages/signin-page/form.component.html
@@ -34,4 +34,5 @@
         <div class="margin">New to Connections? </div> 
         <A href="/signup">Sign up here</A>
     </div>   
+    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast> 
 </div>
