fix: refactor toast message component

--- a/src/app/auth/pages/registration/form.component.html
+++ b/src/app/auth/pages/registration/form.component.html
@@ -50,6 +50,6 @@
         </div>
         </div>     
         <app-button class="login-button" [disabled]="submitDisabled">Register</app-button>         
-    </form>     
-    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast> 
+    </form> 
+    <app-toast></app-toast>
 </div>
