--- a/src/app/auth/pages/signin-page/form.component.html
+++ b/src/app/auth/pages/signin-page/form.component.html
@@ -33,6 +33,6 @@
     <div class="flex">
         <div class="margin">New to Connections? </div> 
         <A href="/signup">Sign up here</A>
-    </div>   
-    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast> 
+    </div>
+    <app-toast></app-toast>
 </div>
