--- a/src/app/auth/pages/profile/profile.component.html
+++ b/src/app/auth/pages/profile/profile.component.html
@@ -25,6 +25,6 @@
             </div>
         </ng-container>
     </div>
-    <app-button [disabled]="isLoggingOut" (click)="this.logoutHandler()">Log out</app-button> 
-    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast>
+    <app-button [disabled]="isLoggingOut" (click)="this.logoutHandler()">Log out</app-button>
+    <app-toast></app-toast>
 </div>
