--- a/src/app/connections/components/groupList/list.component.html
+++ b/src/app/connections/components/groupList/list.component.html
@@ -20,6 +20,6 @@
             text="Delete group?"
             (closeEmitter)="handleCloseConfirmation()"
             (deleteEmitter)="handleDeleteConfirmation()">
-    </app-confirmation> 
-    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast>
+    </app-confirmation>
+    <app-toast></app-toast>
 </div>  
