--- a/src/app/connections/components/peopleList/list.component.html
+++ b/src/app/connections/components/peopleList/list.component.html
@@ -9,6 +9,6 @@
                 {{ item.name.S }}
             </div>
         </div>
-    </div> 
-    <app-toast [message]="toastMessage" [show]="isToastVisible" [mode]="mode"></app-toast>
+    </div>
+    <app-toast></app-toast>
 </div> 
