--- a/src/app/core/components/toast/toast.component.html
+++ b/src/app/core/components/toast/toast.component.html
@@ -1,3 +1,3 @@
-<div class="toast {{show ? 'show' : ''}} {{mode === 'success' ? 'success' : 'error'}}">
-{{message}}
+<div *ngIf="show$ | async" class="toast" [class.error]="(mode$ | async)==='error'" [class.success]="(mode$ | async)==='success'">
+{{message$ | async}}
 </div>
