--- a/src/app/connections/components/groupList/list.component.html
+++ b/src/app/connections/components/groupList/list.component.html
@@ -4,7 +4,7 @@
         <app-button (click)="createHandler()">Create group</app-button>
     </div>
     <div *ngIf="updateDisabled" >You can update group list in: {{countdown$ | async}} seconds</div>
-    <div class="list-block">
+    <div class="list-block" [class.light-theme-list]="!isDarkTheme" [class.dark-theme-list]="isDarkTheme">
         <div class="list-item" *ngFor="let item of items" (click)="itemClickHandler(item)">
             <div *ngIf="item.createdBy.S === params.uid" (click)="deleteHandler(item.id.S)" class="delete">&times;</div>
             <div>
