--- a/src/app/connections/pages/main/main.component.html
+++ b/src/app/connections/pages/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="flex" [class.dark-theme]="isDarkTheme">
+<div class="flex" [class.dark-theme]="isDarkTheme$ | async">
     <div class="list-block paddingL">
         <div>Groups list</div>
         <app-list></app-list>
@@ -8,5 +8,4 @@
         <app-peoplelist></app-peoplelist>
     </div>
     <app-button class="paddingL" (click)="profileClickHandler()">Profile</app-button>
-    <app-button class="paddingL" (click)="themeChangeHandler()">Change theme</app-button>
 </div>
