fix: move get headers to service

--- a/src/app/auth/pages/profile/profile.component.html
+++ b/src/app/auth/pages/profile/profile.component.html
@@ -26,5 +26,6 @@
         </ng-container>
     </div>
     <app-button [disabled]="isLoggingOut" (click)="this.logoutHandler()">Log out</app-button>
+    <app-button (click)="this.backHandler()">Go to main page</app-button>
     <app-toast></app-toast>
 </div>
