--- a/src/app/connections/components/groupList/list.component.html
+++ b/src/app/connections/components/groupList/list.component.html
@@ -5,8 +5,8 @@
     </div>
     <div *ngIf="updateDisabled" >You can update group list in: {{countdown$ | async}} seconds</div>
     <div class="list-block" [class.light-theme-list]="isLight" [class.dark-theme-list]="isDarkTheme$ | async">
-        <div class="list-item" *ngFor="let item of items" (click)="itemClickHandler(item)">
-            <div *ngIf="item.createdBy.S === params.uid" (click)="deleteHandler(item.id.S)" class="delete">&times;</div>
+        <div class="list-item" *ngFor="let item of items" (click)="itemClickHandler($event, item)">
+            <div *ngIf="item.createdBy.S === params.uid" (click)="deleteHandler($event, item.id.S)" class="delete">&times;</div>
             <div>
                 {{ item.name.S }}
             </div>
