fix: toast message after registration

--- a/src/app/auth/pages/registration/form.component.html
+++ b/src/app/auth/pages/registration/form.component.html
@@ -63,7 +63,7 @@
         {{password?.errors?.['passwordStrength']}}
       </div>
     </div>
-    <app-button class="login-button" [disabled]="submitDisabled"
+    <app-button class="login-button" [disabled]="submitDisabled" (click)="loginHandler()"
       >Register</app-button
     >
   </form>
