fix:build options base

--- a/src/app/core/components/toast/toast.component.html
+++ b/src/app/core/components/toast/toast.component.html
@@ -3,6 +3,4 @@
   class="toast"
   [class.error]="(mode$ | async) === 'error'"
   [class.success]="(mode$ | async) === 'success'"
->
-  {{ message$ | async }}
-</div>
+>{{ message$ | async }}</div>
