--- a/src/app/auth/pages/signin-page/form.component.html
+++ b/src/app/auth/pages/signin-page/form.component.html
@@ -44,7 +44,7 @@
   </form>
   <div class="flex">
     <div class="margin">New to Connections?</div>
-    <A href="/signup">Sign up here</A>
+    <A href="#/signup">Sign up here</A>
   </div>
   <app-toast></app-toast>
 </div>
